--- a/documentation/content/en/books/handbook/glossary.adoc
+++ b/documentation/content/en/books/handbook/glossary.adoc
@@ -240,6 +240,9 @@ See crossref:glossary[dhcp-glossary,Dynamic Host Configuration Protocol].
 DNS::
 See crossref:glossary[dns-glossary,Domain Name System].
 
+DRM::
+See crossref:glossary[drm-glossary,Direct Rendering Manager].
+
 DSDT::
 See crossref:glossary[dsdt-glossary,Differentiated System Description Table].
 
@@ -285,6 +288,10 @@ Distance-Vector Multicast Routing Protocol::
 [[dns-glossary]]
 Domain Name System::
 The system that converts humanly readable hostnames (i.e., mail.example.net) to Internet addresses and vice versa.
+
+[[drm-glossary]]
+Direct Rendering Manager::
+The man:drm[7] kernel module allows client applications direct access to the graphical hardware via the Direct Rendering Infrastructure.
 
 [[dhcp-glossary]]
 Dynamic Host Configuration Protocol::
@@ -467,6 +474,9 @@ See crossref:glossary[kdc-glossary,Key Distribution Center].
 KLD::
 See crossref:glossary[kld-glossary,Kernel ld(1)].
 
+KMS::
+See crossref:glossary[kms-glossary,Kernel Mode Setting].
+
 KSE::
 See crossref:glossary[kse-glossary,Kernel Scheduler Entities].
 
@@ -475,6 +485,9 @@ See crossref:glossary[kva-glossary,Kernel Virtual Address].
 
 Kbps::
 See crossref:glossary[kbps-glossary,Kilo Bits Per Second].
+
+[[kms-glossary]]
+Setting the display mode in kernel space.
 
 [[kld-glossary]]
 Kernel man:ld[1]::
@@ -790,6 +803,11 @@ Principle Of Least Astonishment::
 As FreeBSD evolves, changes visible to the user should be kept as unsurprising as possible.
 For example, arbitrarily rearranging system startup variables in [.filename]#/etc/defaults/rc.conf# violates POLA.
 Developers consider POLA when contemplating user-visible system changes.
+
+[[prime-glossary]]
+PRIME::
+A method of multiple physical graphics coprocessors coexisting by
+sharing their direct memory access buffers.
 
 [[pr-glossary]]
 Problem Report::
