--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1136,7 +1136,7 @@ set `PACKAGES` on the build system to a directory similar to `DISTDIR`.
 [[building-on-non-freebsd-hosts]]
 == Building on non-FreeBSD Hosts
 
-Historically, building FreeBSD required a FreeBSD host.
+Historically, building required a FreeBSD host.
 Nowadays, FreeBSD can be built on Linux distributions and macOS.
 
 To build FreeBSD on non-FreeBSD hosts, the recommendation is to use the `tools/build/make.py` script.
