--- a/documentation/content/en/books/handbook/cutting-edge/_index.adoc
+++ b/documentation/content/en/books/handbook/cutting-edge/_index.adoc
@@ -1139,7 +1139,7 @@ set `PACKAGES` on the build system to a directory similar to `DISTDIR`.
 Historically, building required a FreeBSD host.
 Nowadays, FreeBSD can be built on Linux and macOS.
 
-To build FreeBSD on non-FreeBSD hosts, the recommendation is to use the `tools/build/make.py` script.
+To build on a non-FreeBSD host, the `tools/build/make.py` script is recommended.
 This script acts as a wrapper around `bmake`, which is the make implementation used by FreeBSD.
 It ensures that the necessary tooling, including the actual FreeBSD's man:make[1], is bootstrapped and that the build environment is properly configured.
 In particular, it sets the external toolchain variables, such as `XCC`, `XLD`, and others.
