--- a/website/content/en/status/report-2024-10-2024-12/ports-collection-accessibility-colors.adoc
+++ b/website/content/en/status/report-2024-10-2024-12/ports-collection-accessibility-colors.adoc
@@ -13,7 +13,7 @@ The command "make config" uses a text user interface (TUI) to set up port option
 
 Recently low vision users (mainly with cataracts) have requested new features to easily change the colors of the TUI.
 Several features have been implemented to allow changing colors, for example: a new environment variable to set the UI to black and white, or the ability to set colors by reading a configuration file at runtime.
-All features have been described in the https://man.freebsd.org/portconfig/1[portconfig(8)] manual since version 0.6.2.
+All features have been described in man:portconfig[1] since version 0.6.2.
 
 To note, blind users can refer to https://www.freebsd.org/status/report-2023-07-2023-09/#_portoptscliports_collection_accessibility[PortOptsCLI - Ports Collection Accessibility, Status Report Third Quarter 2023] to use the Ports Collection.
 
